--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
+    "@next/third-parties": "^14.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "html-react-parser": "^5.1.12",
