--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.6",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "eslint": "^8",
